--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
   app:
     depends_on:
       - app_db
-    image: wp-graphql-plugin-name:latest-wp${WP_VERSION-5.9}-php${PHP_VERSION-8.0}
+    image: wp-graphql-fluent-forms:latest-wp${WP_VERSION-5.9}-php${PHP_VERSION-8.0}
     volumes:
-      - '.:/var/www/html/wp-content/plugins/wp-graphql-plugin-name'
+      - '.:/var/www/html/wp-content/plugins/wp-graphql-fluent-forms'
       - './.log/app:/var/log/apache2'
     env_file:
       - .env
@@ -34,9 +34,9 @@ services:
   testing:
     depends_on:
       - app_db
-    image: wp-graphql-plugin-name-testing:latest-wp${WP_VERSION-5.9}-php${PHP_VERSION-8.0}
+    image: wp-graphql-fluent-forms-testing:latest-wp${WP_VERSION-5.9}-php${PHP_VERSION-8.0}
     volumes:
-      - '.:/var/www/html/wp-content/plugins/wp-graphql-plugin-name'
+      - '.:/var/www/html/wp-content/plugins/wp-graphql-fluent-forms'
       - './.log/testing:/var/log/apache2'
     env_file:
       - .env
