--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,13 +11,13 @@
 		<const name="WP_TESTS_MULTISITE" value="1" />
   	</php>
 	<testsuites>
-		<testsuite name="WPGraphQL Plugin Name Test Suite">
+		<testsuite name="WPGraphQL Fluent Forms Test Suite">
 			<directory prefix="test-" suffix=".php">./tests/</directory>
 		</testsuite>
 	</testsuites>
 	<filter>
 		<whitelist processUncoveredFilesFromWhitelist="true">
-			<file>./wp-graphql-plugin-name.php</file>
+			<file>./wp-graphql-fluent-forms.php</file>
 			<file>./access-functions.php</file>
 			<directory suffix=".php">./src/</directory>
 		</whitelist>
